apps/sites/gesturebot/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gesturebot
  labels:
    app: gesturebot
spec:
  selector:
    matchLabels:
      app: gesturebot
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gesturebot
    spec:
      containers:
      - name: gesturebot
        image: nginx:stable-alpine
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 80
          name: gesturebot
        volumeMounts:
        - name: site
          mountPath: /usr/share/nginx/html
      volumes:
        - name: site
          nfs:
            server: "${STORAGE_SERVER}"
            path: "/storage/websites/gesturebot"
      restartPolicy: Always
